--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Tauri dependencies setup
+      run: |
+        sudo apt update
+        sudo apt install libwebkit2gtk-4.0-dev \
+          build-essential \
+          curl \
+          wget \
+          file \
+          libssl-dev \
+          libgtk-3-dev \
+          libayatana-appindicator3-dev \
+          librsvg2-dev
     - name: Run tests
       run: cargo test --verbose
