--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,6 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.82"
+clap = { version = "4.5.4", features = ["derive"] }
+log = { version = "0.4.21" }
+fern = { version = "0.6.2", features = ["colored"] }
+humantime = "2.1.0"
 
+[profile.release]
+strip = true
+opt-level = 3
+incremental = true
+debug-assertions = false
+lto = true
 
 [features]
