feat: command and control gui compilation from server component

--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -3,4 +3,11 @@ name = "rs2-agent"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+strip = true
+opt-level = "z"
+incremental = true
+debug-assertions = false
+lto = true
+
 [dependencies]
