--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,15 +11,15 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
+
+      # Install tauri dependencies
     - name: Tauri dependencies setup
       run: |
         sudo apt update
-        sudo apt install libwebkit2gtk-4.0-dev \
+        sudo apt install -y libwebkit2gtk-4.0-dev \
           build-essential \
           curl \
           wget \
@@ -28,5 +28,34 @@ jobs:
           libgtk-3-dev \
           libayatana-appindicator3-dev \
           librsvg2-dev
+
+      # install node
+    - name: Install Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+
+      # install pnpm
+    - uses: pnpm/action-setup@v4
+      name: Install pnpm
+      with:
+        version: latest
+        run_install: false
+
+      # install Rust stable
+    - name: install Rust stable
+      run: |
+        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+        . "$HOME/.cargo/env"
+        rustup default stable
+        rustup target add x86_64-pc-windows-msvc
+        rustup target add x86_64-unknown-linux-gnu
+
+      # Install the frontend dependencies
+    - name: install frontend dependencies
+      run: pnpm i -C command-and-control-gui
+
     - name: Run tests
-      run: cargo test --verbose
+      run: |
+        . "$HOME/.cargo/env"
+        cargo test --verbose
