--- a/command-and-control-gui/src-tauri/Cargo.toml
+++ b/command-and-control-gui/src-tauri/Cargo.toml
@@ -5,13 +5,20 @@ description = "The command and control client for the RS2 project."
 repository = ""
 default-run = "rs2-command-and-control"
 
+[profile.release]
+strip = true
+opt-level = 3
+incremental = true
+debug-assertions = false
+lto = true
+
 [build-dependencies]
-tauri-build = { version = "1.5.2" }
+tauri-build = { version = "1.5.2", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.6.5" }
+tauri = { version = "1.6.5", features = [] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
