--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -30,13 +30,16 @@ validator = { version = "0.18.1", features = ["derive"] }
 # Async runtime and related
 tokio = { version = "1.0", features = ["full", "tracing"] }
 once_cell = "1.19.0"
+axum = { version = "0.7.5", features = ["http2", "multipart"] }
+tower = { version = "0.4.4" }
+tower-http = { version = "0.5.2", features = ["catch-panic", "map-request-body", "map-response-body", "normalize-path", "sensitive-headers", "set-header", "set-status", "trace", "validate-request", "auth"] }
 # Logging for async code
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["json"] }
 # Web server and related
 jsonwebtoken = "9.3.0"
-
-[build]
-rustflags = ["--cfg", "tokio_unstable"]
+# Random number generation and cryptography
+rand = { version = "0.8.5" }
+base64 = "0.22.1"
 
 [features]
