--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,10 +17,6 @@ clap = { version = "4.5.4", features = ["derive"] }
 # Non async logging
 log = { version = "0.4.21" }
 fern = { version = "0.6.2", features = ["colored"] }
-# Misc
-humantime = "2.1.0"
-colored = "2.1.0"
-regex = "1.10.4"
 # Unix related features, used by the compiler
 nix = { version = "0.28.0", features = ["user"] }
 # Serialization & validation
@@ -29,10 +25,11 @@ serde_json = "1.0"
 validator = { version = "0.18.1", features = ["derive"] }
 # Async runtime and related
 tokio = { version = "1.0", features = ["full", "tracing"] }
+tokio-util = { version = "0.7.11", features = ["full"] }
 once_cell = "1.19.0"
 axum = { version = "0.7.5", features = ["http2", "multipart"] }
 tower = { version = "0.4.4" }
-tower-http = { version = "0.5.2", features = ["catch-panic", "map-request-body", "map-response-body", "normalize-path", "sensitive-headers", "set-header", "set-status", "trace", "validate-request", "auth"] }
+tower-http = { version = "0.5.2", features = ["catch-panic", "normalize-path", "sensitive-headers", "trace", "validate-request", "compression-full"] }
 # Logging for async code
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
@@ -41,5 +38,14 @@ jsonwebtoken = "9.3.0"
 # Random number generation and cryptography
 rand = { version = "0.8.5" }
 base64 = "0.22.1"
+# Database
+diesel = { version = "2.1.6", features = ["postgres", "extras"] }
+diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
+bb8 = { version = "0.8.3" }
+# Misc
+humantime = "2.1.0"
+colored = "2.1.0"
+regex = "1.10.4"
+rs2_utils = { path = "../libs/rs2_utils" }
 
 [features]
