feat: argon2id password hashing and key derivation utility

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,6 @@ members = [
     "agent",
     "server",
     "command-and-control-gui/src-tauri"
-    , "libs/rs2_utils"]
+    , "libs/rs2_utils", "libs/rs2_crypt"]
 resolver = "2"
 package = { authors = ["ebalo55 <me@ebalo.xyz>"], edition = "2021", version = "0.1.0" }
