--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -48,5 +48,6 @@ humantime = "2.1.0"
 colored = "2.1.0"
 regex = "1.10.4"
 rs2_utils = { path = "../libs/rs2_utils" }
+rs2_crypt = { path = "../libs/rs2_crypt", features = ["argon2"] }
 
 [features]
