--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,12 +24,13 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 validator = { version = "0.18.1", features = ["derive"] }
 # Async runtime and related
-tokio = { version = "1.0", features = ["full", "tracing"] }
+tokio = { version = "1.0", features = ["full", "tracing", "test-util"] }
 tokio-util = { version = "0.7.11", features = ["full"] }
 once_cell = "1.19.0"
-axum = { version = "0.7.5", features = ["http2", "multipart"] }
+axum = { version = "0.7.5", features = ["http2", "multipart", "macros"] }
+axum-extra = { version = "0.9.3", features = ["typed-header"] }
 tower = { version = "0.4.4" }
-tower-http = { version = "0.5.2", features = ["catch-panic", "normalize-path", "sensitive-headers", "trace", "validate-request", "compression-full"] }
+tower-http = { version = "0.5.2", features = ["catch-panic", "normalize-path", "sensitive-headers", "trace", "validate-request", "compression-full", "limit"] }
 # Logging for async code
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
@@ -47,7 +48,9 @@ diesel_migrations = { version = "2.1.0", features = ["postgres"] }
 humantime = "2.1.0"
 colored = "2.1.0"
 regex = "1.10.4"
+chrono = { version = "0.4.38" }
 rs2_utils = { path = "../libs/rs2_utils" }
 rs2_crypt = { path = "../libs/rs2_crypt", features = ["argon2"] }
+uuid = { version = "1.8.0", features = ["v4"] }
 
 [features]
