--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -29,6 +29,7 @@ tokio-util = { version = "0.7.11", features = ["full"] }
 once_cell = "1.19.0"
 axum = { version = "0.7.5", features = ["http2", "multipart", "macros"] }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
+axum-server = { version = "0.6.0", features = ["tls-rustls"] }
 tower = { version = "0.4.4" }
 tower-http = { version = "0.5.2", features = ["catch-panic", "normalize-path", "sensitive-headers", "trace", "validate-request", "compression-full", "limit"] }
 # Logging for async code
@@ -39,6 +40,7 @@ jsonwebtoken = "9.3.0"
 # Random number generation and cryptography
 rand = { version = "0.8.5" }
 base64 = "0.22.1"
+rcgen = { version = "0.13.1" }
 # Database
 diesel = { version = "2.1.6", features = ["postgres", "extras", "chrono"] }
 diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
