--- a/server/sample-config.json
+++ b/server/sample-config.json
@@ -1,7 +1,15 @@
 {
+    "$schema":    "server-config.schema.json",
     "api_server": {
-        "port": 3000,
-        "host": "127.0.0.1"
+        "port": 8080,
+        "host": "127.0.0.1",
+        "tls":  {
+            "enabled": true,
+            "port":    8443,
+            "host":    "127.0.0.1",
+            "cert":    "./server/sample-tls-certificates/cert.pem",
+            "key":     "./server/sample-tls-certificates/key.pem"
+        }
     },
     "log":        {
         "file":    {
