--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,23 @@
 [build]
+target = "x86_64-pc-windows-gnu"
 rustflags = ["--cfg", "tokio_unstable"]
+
+[target.x86_64-pc-windows-gnu]
+rustflags = [
+    "-C", "panic=abort",
+    "--emit=obj",
+    #    "-Z", "build-std-feature=compiler_builtins_mem,panic_immediate_abort",
+    #    "-Z", "build-std=core,panic_abort,alloc"
+]
+
+[target.i686-pc-windows-gnu]
+rustflags = [
+    "-C", "panic=abort",
+    "--emit=obj",
+    #    "-Z", "build-std-feature=compiler_builtins_mem,panic_immediate_abort",
+    #    "-Z", "build-std=core,panic_abort,alloc"
+]
+
+[unstable]
+build-std = ["core", "panic_abort", "alloc"]
+build-std-features = ["panic_immediate_abort", "compiler-builtins-mem"]
