--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 members = [
     "agent",
     "server",
-    "command-and-control-gui/src-tauri"
-    , "libs/rs2_utils", "libs/rs2_crypt"]
+    "command-and-control-gui/src-tauri",
+    "libs/rs2_utils",
+    "libs/rs2_crypt",
+    "libs/coffee",
+    "libs/mod-coff-hello-world"
+]
 resolver = "2"
 package = { authors = ["ebalo55 <me@ebalo.xyz>"], edition = "2021", version = "0.1.0" }
