--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [build]
-target = "x86_64-pc-windows-gnu"
+#target = "x86_64-pc-windows-gnu"
+target = "x86_64-unknown-linux-gnu"
 rustflags = ["--cfg", "tokio_unstable"]
 
 [target.x86_64-pc-windows-gnu]
