--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,24 +1,29 @@
-[build]
+#[build]
+#target = "x86_64-unknown-linux-gnu"
+#rustflags = ["--cfg", "tokio_unstable"]
+
+#[unstable]
+#build-std = ["core", "panic_abort", "alloc"]
+#build-std-features = ["panic_immediate_abort", "compiler-builtins-mem"]
+#
+#[coffee-ldr]
+#force-target = "x86_64-pc-windows-gnu" # When building from *nix
+##force-target = "x86_64-pc-windows-msvc" # When building from windows
+#
+#[agent]
+#force-target = "x86_64-pc-windows-gnu" # When building from *nix
+##force-target = "x86_64-pc-windows-msvc" # When building from windows
+#
+#[mod-coff-hello-world]
+#force-target = "x86_64-pc-windows-gnu" # When building from *nix
+##force-target = "x86_64-pc-windows-msvc" # When building from windows
+#
+#[build]
 #target = "x86_64-pc-windows-gnu"
-target = "x86_64-unknown-linux-gnu"
-rustflags = ["--cfg", "tokio_unstable"]
-
-[target.x86_64-pc-windows-gnu]
-rustflags = [
-    "-C", "panic=abort",
-    "--emit=obj",
-    #    "-Z", "build-std-feature=compiler_builtins_mem,panic_immediate_abort",
-    #    "-Z", "build-std=core,panic_abort,alloc"
-]
-
-[target.i686-pc-windows-gnu]
-rustflags = [
-    "-C", "panic=abort",
-    "--emit=obj",
-    #    "-Z", "build-std-feature=compiler_builtins_mem,panic_immediate_abort",
-    #    "-Z", "build-std=core,panic_abort,alloc"
-]
-
-[unstable]
-build-std = ["core", "panic_abort", "alloc"]
-build-std-features = ["panic_immediate_abort", "compiler-builtins-mem"]
+#rustflags = [
+#    "-C", "panic=abort",
+#    "--emit=obj",
+#]
+#[unstable]
+#build-std = ["core", "panic_abort", "alloc"]
+#build-std-features = ["panic_immediate_abort", "compiler-builtins-mem"]
