--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ members = [
     "libs/rs2_crypt",
     "libs/coffee",
     "libs/mod-coff-hello-world"
-]
+    , "libs/mod-wasm-hello-world"]
 resolver = "2"
 package = { authors = ["ebalo55 <me@ebalo.xyz>"], edition = "2021", version = "0.1.0" }
