--- a/libs/mod-coff-hello-world/Cargo.toml
+++ b/libs/mod-coff-hello-world/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 [dependencies]
 bofhelper = { path = "../bofhelper" }
 bofentry = { path = "../bofentry" }
-bofalloc = { path = "../bofalloc" }
+#bofalloc = { path = "../bofalloc" }
+wee_alloc = { version = "0.4.5" }
 
 [profile.dev]
 panic = "abort"
