--- a/libs/mod-coff-hello-world/Makefile.toml
+++ b/libs/mod-coff-hello-world/Makefile.toml
@@ -7,32 +7,53 @@ MINGW_X86_PREFIX = "i686-w64-mingw32-"
 MINGW_X64_PREFIX = "x86_64-w64-mingw32-"
 BOF_NAME = "mod-coff-hello-world"
 
-[tasks.combine-objs]
-script = "${MINGW_PREFIX}ld -T linker_script.ld --gc-sections -u ${ENTRY_PREFIX}entrypoint -i ../../target/${RUST_TARGET}/release/deps/*.o -o ../../target/${RUST_TARGET}/release/${BOF_NAME}.${BOF_ARCH}.o"
+# Combine the object files into a single object file
+[tasks.combine-objs.linux]
+script_runner = "@shell"
+script = '''
+${MINGW_PREFIX}ld -T linker_script.ld --gc-sections -u ${ENTRY_PREFIX}go \
+    -i ${CARGO_MAKE_CRATE_TARGET_DIRECTORY}/${RUST_TARGET}/release/deps/*.o \
+    -o ${CARGO_MAKE_CRATE_TARGET_DIRECTORY}/${RUST_TARGET}/release/${CARGO_MAKE_CRATE_NAME}.${BOF_ARCH}.o
+'''
 dependencies = ["generate-linker-script", "build"]
 
 [tasks.strip-uneeded]
 command = "${MINGW_PREFIX}strip"
-args = ["--strip-unneeded", "../../target/${RUST_TARGET}/release/${BOF_NAME}.${BOF_ARCH}.o"]
+args = ["--strip-unneeded", "../../target/${RUST_TARGET}/release/${CARGO_MAKE_CRATE_NAME}.${BOF_ARCH}.o"]
 dependencies = ["combine-objs"]
 
 [tasks.generate-linker-script]
-script = "${MINGW_PREFIX}ld -i --verbose | sed -n '/^======/, /^======/p' | grep -v '=======' | sed 's/\\(*(.rdata)\\)/__rdata_start__ = .;\\n\\1\\n*(.rdata$.refptr.*)/' | sed 's/\\(*(.text)\\)/__text_start__ = .;\\n\\1/' | sed 's/\\(*(.data)\\)/__data_start__ = .;\\n\\1/' > linker_script.ld"
+script = """
+${MINGW_PREFIX}ld -i --verbose | \
+    sed -n '/^======/, /^======/p' | \
+    grep -v '=======' | \
+    sed 's/\\(*(.rdata)\\)/__rdata_start__ = .;\\n\\1\\n*(.rdata$.refptr.*)/' | \
+    sed 's/\\(*(.text)\\)/__text_start__ = .;\\n\\1/' | \
+    sed 's/\\(*(.data)\\)/__data_start__ = .;\\n\\1/' > linker_script.ld
+"""
 
 [tasks.build]
-toolchain = "nightly"
-install_crate = { rustup_component_name = "rust-src" }
-command = "cargo"
-args = ["build", "-p", "${BOF_NAME}", "--target", "${RUST_TARGET}", "--release"]
-#env = { "RUSTFLAGS" = "-Z build-std-feature=compiler_builtins_mem,panic_immediate_abort -Z build-std=core,panic_abort,alloc -C panic=abort" }
-env = { "RUSTFLAGS" = "--emit=obj -C target-feature=-crt-static -C panic=abort --cfg compiler_builtins_mem --cfg panic_immediate_abort --cfg core --cfg panic_abort --cfg alloc" }
+script_runner = "@shell"
+script = '''
+echo "$ rustup +nightly component add rust-src --target ${RUST_TARGET}"
+rustup +nightly component add rust-src --target ${RUST_TARGET}
+
+echo "$ cargo +nightly build -p ${CARGO_MAKE_CRATE_NAME} --target ${RUST_TARGET} --release -Z build-std=core,panic_abort,alloc -Z build-std-features=panic_immediate_abort,compiler-builtins-mem"
+cargo +nightly build \
+    -p ${CARGO_MAKE_CRATE_NAME} \
+    --target ${RUST_TARGET} \
+    --release \
+    -Z build-std=core,panic_abort,alloc \
+    -Z build-std-features=panic_immediate_abort,compiler-builtins-mem
+'''
+env = { "RUSTFLAGS" = "-C panic=abort --emit=obj" }
 
 [tasks.clean-target]
 command = "cargo"
 args = ["clean"]
 
 [tasks.clean-bof]
-script = "rm -rf ${BOF_NAME}.*.o"
+script = "rm -rf ${CARGO_MAKE_CRATE_NAME}.*.o"
 
 [tasks.clean-misc]
 command = "rm"
