--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -4,25 +4,28 @@ version = "0.1.0"
 edition = "2021"
 
 [profile.release]
-strip = true
 opt-level = "z"
 codegen-units = 1
-incremental = true
-debug-assertions = false
 lto = true
+strip = true
+debug = false
+debug-assertions = false
+panic = "abort"
+incremental = false
 
 [dependencies]
-libc = { version = "0.2.155", default-features = false, features = [] }
+#libc = { version = "0.2.155", default-features = false, features = [] }
 wee_alloc = "0.4.5"
 wasmer = { version = "4.2.8", default-features = false, features = ["engine"], optional = true }
 wasmtime = { version = "21.0.1", default-features = false, features = ["runtime"], optional = true }
 wasmi = { version = "0.31.2", optional = true }
-wain-syntax-binary = { version = "0.1.5" }
-wain-exec = { version = "0.3.1" }
-wain-ast = { version = "0.2.2" }
+wain-syntax-binary = { version = "0.1.5", optional = true }
+wain-exec = { version = "0.3.1", optional = true }
+wain-ast = { version = "0.2.2", optional = true }
 
 [features]
 default = []
 wasmer = ["dep:wasmer"]
 wasmtime = ["dep:wasmtime"]
 wasmi = ["dep:wasmi"]
+wain = ["dep:wain-syntax-binary", "dep:wain-exec", "dep:wain-ast"]
