--- a/libs/mod-coff-hello-world/Makefile.toml
+++ b/libs/mod-coff-hello-world/Makefile.toml
@@ -6,47 +6,53 @@ default_to_workspace = false
 MINGW_X86_PREFIX = "i686-w64-mingw32-"
 MINGW_X64_PREFIX = "x86_64-w64-mingw32-"
 BOF_NAME = "mod-coff-hello-world"
+MODE = "--release"
+OUTPUT_FOLDER = "release"
+
+[env.debug]
+MINGW_X86_PREFIX = "i686-w64-mingw32-"
+MINGW_X64_PREFIX = "x86_64-w64-mingw32-"
+BOF_NAME = "mod-coff-hello-world"
+MODE = ""
+OUTPUT_FOLDER = "debug"
 
 # Combine the object files into a single object file
 [tasks.combine-objs.linux]
 script_runner = "@shell"
 script = '''
 ${MINGW_PREFIX}ld -T linker_script.ld --gc-sections -u ${ENTRY_PREFIX}go \
-    -i ${CARGO_MAKE_CRATE_TARGET_DIRECTORY}/${RUST_TARGET}/release/deps/*.o \
-    -o ${CARGO_MAKE_CRATE_TARGET_DIRECTORY}/${RUST_TARGET}/release/${CARGO_MAKE_CRATE_NAME}.${BOF_ARCH}.o
+    -i ${CARGO_MAKE_CRATE_TARGET_DIRECTORY}/${RUST_TARGET}/${OUTPUT_FOLDER}/deps/*.o \
+    -o ${CARGO_MAKE_CRATE_TARGET_DIRECTORY}/${RUST_TARGET}/${OUTPUT_FOLDER}/${CARGO_MAKE_CRATE_NAME}.${BOF_ARCH}.o
 '''
 dependencies = ["generate-linker-script", "build"]
 
 [tasks.strip-uneeded]
 command = "${MINGW_PREFIX}strip"
-args = ["--strip-unneeded", "../../target/${RUST_TARGET}/release/${CARGO_MAKE_CRATE_NAME}.${BOF_ARCH}.o"]
+args = ["--strip-unneeded", "../../target/${RUST_TARGET}/${OUTPUT_FOLDER}/${CARGO_MAKE_CRATE_NAME}.${BOF_ARCH}.o"]
 dependencies = ["combine-objs"]
 
 [tasks.generate-linker-script]
 script = """
 ${MINGW_PREFIX}ld -i --verbose | \
     sed -n '/^======/, /^======/p' | \
-    grep -v '=======' | \
-    sed 's/\\(*(.rdata)\\)/__rdata_start__ = .;\\n\\1\\n*(.rdata$.refptr.*)/' | \
-    sed 's/\\(*(.text)\\)/__text_start__ = .;\\n\\1/' | \
-    sed 's/\\(*(.data)\\)/__data_start__ = .;\\n\\1/' > linker_script.ld
+    grep -v '=======' > linker_script.ld
 """
+#| \
+#sed 's/\\(*(.rdata)\\)/__rdata_start__ = .;\\n\\1\\n*(.rdata$.refptr.*)/' | \
+#sed 's/\\(*(.text)\\)/__text_start__ = .;\\n\\1/' | \
+#sed 's/\\(*(.data)\\)/__data_start__ = .;\\n\\1/' > linker_script.ld
 
 [tasks.build]
 script_runner = "@shell"
 script = '''
-echo "$ rustup +nightly component add rust-src --target ${RUST_TARGET}"
-rustup +nightly component add rust-src --target ${RUST_TARGET}
-
-echo "$ cargo +nightly build -p ${CARGO_MAKE_CRATE_NAME} --target ${RUST_TARGET} --release -Z build-std=core,panic_abort,alloc -Z build-std-features=panic_immediate_abort,compiler-builtins-mem"
+echo "$ cargo +nightly build --lib -p ${CARGO_MAKE_CRATE_NAME} --target ${RUST_TARGET} ${MODE}"
 cargo +nightly build \
+    --lib \
     -p ${CARGO_MAKE_CRATE_NAME} \
     --target ${RUST_TARGET} \
-    --release \
-    -Z build-std=core,panic_abort,alloc \
-    -Z build-std-features=panic_immediate_abort,compiler-builtins-mem
+    ${MODE}
 '''
-env = { "RUSTFLAGS" = "-C panic=abort --emit=obj" }
+#env = { "RUSTFLAGS" = "--emit=obj" }
 
 [tasks.clean-target]
 command = "cargo"
@@ -63,7 +69,8 @@ args = ["-rf", "linker_script.ld"]
 dependencies = ["clean-target", "clean-bof", "clean-misc"]
 
 [tasks.all]
-dependencies = ["strip-uneeded"]
+#dependencies = ["strip-uneeded"]
+dependencies = ["build", "generate-linker-script"]
 
 [tasks.cleanall]
 dependencies = ["clean", "default"]
