--- a/libs/coffee/Cargo.toml
+++ b/libs/coffee/Cargo.toml
@@ -21,33 +21,12 @@ debug-assertions = false
 lto = true
 
 [dependencies]
-clap = { version = "4.3.5", features = ["derive"] }     # For command line parsing.
-tracing-subscriber = "0.3.17"                           # For logging.
-color-eyre = "0.6.2"                                    # For error handling.
-goblin = { version = "0.7.1", features = ["alloc"] }    # For parsing COFF files. object can be used too.
-widestring = "1.0.2"                                    # For wide string support.
-tracing = "0.1.37"                                      # For logging.                                    
-printf-compat = "0.1.1"                                 # For printf formatting.
-byteorder = "1.4.3"                                     # For endianess conversion.
-
-# Windows APIs.
-windows = { version = "0.48.0", features = [
-    "Win32_Foundation",
-    "Win32_System_Memory",
-    "Win32_System_SystemServices",
-    "Win32_System_LibraryLoader",
-    "Win32_System_Threading",
-    "Win32_Security",
-    "Win32_System_Diagnostics_Debug"
-] }
-
-# Pure type definitions for Windows APIs.
-windows-sys = { version = "0.48.0", features = [
-    "Win32_Foundation",
-    "Win32_System_Memory",
-    "Win32_System_SystemServices",
-    "Win32_System_LibraryLoader",
-    "Win32_System_Threading",
-    "Win32_Security",
-    "Win32_System_Diagnostics_Debug"
-] }
+# Command line parsing.
+clap = { version = "4.3.5", features = ["derive"] }
+# Logging.
+tracing-subscriber = "0.3.17"
+tracing = { version = "0.1.37", optional = true }
+# Error handling.
+color-eyre = "0.6.2"
+# Implementation
+mod-coffee-core = { path = "../mod-coffee-core", features = ["tracing"] }
