--- a/libs/coffee/Cargo.toml
+++ b/libs/coffee/Cargo.toml
@@ -29,4 +29,4 @@ tracing = { version = "0.1.37", optional = true }
 # Error handling.
 color-eyre = "0.6.2"
 # Implementation
-mod-coffee-core = { path = "../mod-loader-coffee-core", features = ["tracing"] }
+mod-coffee-core = { path = "../../modules/mod-loader-coffee-core", features = ["tracing"] }
