--- a/modules/mod-protocol-json/Cargo.toml
+++ b/modules/mod-protocol-json/Cargo.toml
@@ -26,3 +26,5 @@ uuid = { version = "1.8.0", features = ["v4"] }
 
 [dev-dependencies]
 tokio = { version = "1.37.0", features = ["full"] }
+axum = "0.7.5"
+tokio-util = "0.7.11"
