--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,48 +11,23 @@ debug-assertions = false
 lto = true
 
 [dependencies]
-# Command line parsing and advanced error handling
-anyhow = "1.0.82"
-clap = { version = "4.5.4", features = ["derive"] }
-# Non async logging
-log = { version = "0.4.21" }
-fern = { version = "0.6.2", features = ["colored"] }
-# Unix related features, used by the compiler
-nix = { version = "0.28.0", features = ["user"] }
-# Serialization & validation
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-validator = { version = "0.18.1", features = ["derive"] }
-# Async runtime and related
-tokio = { version = "1.0", features = ["full", "tracing", "test-util"] }
-tokio-util = { version = "0.7.11", features = ["full"] }
-once_cell = "1.19.0"
-axum = { version = "0.7.5", features = ["http2", "multipart", "macros"] }
-axum-extra = { version = "0.9.3", features = ["typed-header"] }
-axum-server = { version = "0.6.0", features = ["tls-rustls"] }
-tower = { version = "0.4.4" }
-tower-http = { version = "0.5.2", features = ["catch-panic", "normalize-path", "sensitive-headers", "trace", "validate-request", "compression-full", "limit"] }
-# Logging for async code
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["json"] }
-# Web server and related
-jsonwebtoken = "9.3.0"
-# Random number generation and cryptography
-rand = { version = "0.8.5" }
-base64 = "0.22.1"
-rcgen = { version = "0.13.1" }
-# Database
-diesel = { version = "2.1.6", features = ["postgres", "extras", "chrono"] }
-diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
-bb8 = { version = "0.8.3" }
-diesel_migrations = { version = "2.1.0", features = ["postgres"] }
-# Misc
-humantime = "2.1.0"
-colored = "2.1.0"
-regex = "1.10.4"
-chrono = { version = "0.4.38" }
+anyhow = "1.0.86" # used
+clap = { version = "4.5.4", features = ["derive"] } # used
+log = { version = "0.4.21" } # used
+fern = { version = "0.6.2", features = ["colored"] } # used
+tracing-subscriber = { version = "0.3.18", features = ["json"] }
+colored = "2.1.0" # used
+nix = { version = "0.29.0", features = ["user"] } # used
+serde = { version = "1.0", features = ["derive"] } # used
+serde_json = "1.0" # used
+rand = { version = "0.8.5" } # used
+base64 = "0.22.1" # used
+rcgen = { version = "0.13.1" }# used
 rs2_utils = { path = "../libs/rs2-utils" }
 rs2_crypt = { path = "../libs/rs2-crypt", features = ["argon2"] }
-uuid = { version = "1.8.0", features = ["v4"] }
+srv-mod-config = { path = "../modules/srv-mod-config" }
+srv-mod-operator-api = { path = "../modules/srv-mod-operator-api" }
+srv-mod-database = { path = "../modules/srv-mod-database" }
+once_cell = "1.19.0"
 
 [features]
