--- a/modules/srv-mod-config/Cargo.toml
+++ b/modules/srv-mod-config/Cargo.toml
@@ -8,7 +8,7 @@ log = { version = "0.4.21" }
 tokio = { version = "1.0", features = ["full", "tracing", "test-util"] }
 serde = { version = "1.0", features = ["derive"] }
 validator = { version = "0.18.1", features = ["derive"] }
-rs2_utils = { path = "../../libs/rs2-utils", features = ["print-validation-error"] }
+rs2-utils = { path = "../../libs/rs2-utils", features = ["print-validation-error"] }
 anyhow = "1.0.86"
 serde_json = "1.0.117"
 nix = "0.29.0"
