--- a/modules/srv-mod-database/Cargo.toml
+++ b/modules/srv-mod-database/Cargo.toml
@@ -10,9 +10,9 @@ bb8 = { version = "0.8.3" }
 diesel_migrations = { version = "2.1.0", features = ["postgres"] }
 tokio = { version = "1.0", features = ["full", "tracing", "test-util"] }
 tracing = "0.1"
-rs2_utils = { path = "../../libs/rs2-utils" }
+rs2-utils = { path = "../../libs/rs2-utils" }
 anyhow = "1.0.86"
 humantime = "2.1.0"
 chrono = "0.4.38"
 uuid = { version = "1.8.0" }
-rs2_crypt = { path = "../../libs/rs2-crypt", features = ["argon2"] }
+rs2-crypt = { path = "../../libs/rs2-crypt", features = ["argon2"] }
