--- a/modules/mod-protocol-json/Cargo.toml
+++ b/modules/mod-protocol-json/Cargo.toml
@@ -20,9 +20,11 @@ incremental = false
 serde = { version = "1.0.202", features = ["derive"] }
 serde_json = { version = "1.0.117" }
 rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
+rs2-crypt = { path = "../../libs/rs2-crypt" }
 reqwest = { version = "0.12.4", features = ["rustls-tls", "stream"] }
 bytes = "1.6.0"
 uuid = { version = "1.8.0", features = ["v4"] }
+anyhow = "1.0.86"
 
 [dev-dependencies]
 tokio = { version = "1.37.0", features = ["full"] }
