--- a/modules/srv-mod-database/diesel.toml
+++ b/modules/srv-mod-database/diesel.toml
@@ -3,6 +3,7 @@
 
 [print_schema]
 with_docs = true
+file = "src/schema.rs"
 custom_type_derives = ["diesel::query_builder::QueryId", "diesel::sql_types::SqlType", "std::fmt::Debug"]
 
 [migrations_directory]
