--- a/modules/srv-mod-database/Cargo.toml
+++ b/modules/srv-mod-database/Cargo.toml
@@ -14,5 +14,7 @@ rs2-utils = { path = "../../libs/rs2-utils" }
 anyhow = "1.0.86"
 humantime = "2.1.0"
 chrono = "0.4.38"
-uuid = { version = "1.8.0" }
 rs2-crypt = { path = "../../libs/rs2-crypt", features = ["argon2"] }
+rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
+cuid2 = "0.1.2"
+once_cell = "1.19.0"
