--- a/modules/srv-mod-http-handler/Cargo.toml
+++ b/modules/srv-mod-http-handler/Cargo.toml
@@ -9,3 +9,34 @@ srv-mod-config = { path = "../srv-mod-config" }
 srv-mod-database = { path = "../srv-mod-database" }
 rs2-utils = { path = "../../libs/rs2-utils" }
 anyhow = "1.0.86"
+serde = { version = "1.0.203", features = ["derive"] }
+rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
+tracing = "0.1"
+axum = { version = "0.7.5", features = ["http2", "multipart", "macros"] }
+axum-extra = { version = "0.9.3", features = ["typed-header"] }
+axum-server = { version = "0.6.0", features = ["tls-rustls"] }
+tower = { version = "0.4.4" }
+tower-http = { version = "0.5.2", features = [
+    "catch-panic",
+    "normalize-path",
+    "sensitive-headers",
+    "trace",
+    "validate-request",
+    "compression-full",
+    "limit"
+] }
+tokio = { version = "1.0", features = ["full", "tracing", "test-util"] }
+tokio-util = { version = "0.7.11", features = ["full"] }
+mod-protocol-json = { path = "../mod-protocol-json" }
+rs2-crypt = { path = "../../libs/rs2-crypt", features = [
+    "sha3",
+    "hex-encoding",
+    "base32-encoding",
+    "base64-encoding",
+    "asymmetric-encryption",
+] }
+bytes = "1.6.0"
+
+[dev-dependencies]
+serde_json = "1.0.117"
+serial_test = "3.1.1"
