--- a/libs/rs2-communication-protocol/Cargo.toml
+++ b/libs/rs2-communication-protocol/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0.203" }
+serde = { version = "1.0", features = ["derive", "rc"] }
 bytes = "1.6.0"
 rs2-crypt = { path = "../rs2-crypt" }
 anyhow = "1.0.86"
 hex-literal = "0.4.1"
+
+[dev-dependencies]
+serde_json = "1.0"
