feat: dynamically load configuration for the agent checking based on matching filters - aka filters engine

--- a/modules/srv-mod-database/diesel.toml
+++ b/modules/srv-mod-database/diesel.toml
@@ -4,7 +4,7 @@
 [print_schema]
 with_docs = true
 file = "src/schema.rs"
-custom_type_derives = ["diesel::query_builder::QueryId", "diesel::sql_types::SqlType", "std::fmt::Debug"]
+custom_type_derives = ["diesel::query_builder::QueryId", "diesel::sql_types::SqlType", "std::fmt::Debug", "Clone", "PartialEq"]
 
 [migrations_directory]
 dir = "migrations"
