--- a/libs/rs2-indirect-syscall/Cargo.toml
+++ b/libs/rs2-indirect-syscall/Cargo.toml
@@ -4,7 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-windows = { version = "0.56.0", default-features = false, features = [
-    "Win32_System_Kernel"
-] }
 lazy_static = "1.4.0"
+libc-print = "0.1.23"
