--- a/command-and-control-gui/package.json
+++ b/command-and-control-gui/package.json
@@ -11,18 +11,20 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
-    "@mantine/core": "^7.9.2",
-    "@mantine/form": "^7.9.2",
-    "@mantine/hooks": "^7.9.2",
-    "@react-three/drei": "^9.105.6",
-    "@react-three/fiber": "^8.16.6",
-    "@tauri-apps/api": "^1.5.5",
+      "@mantine/core":          "^7.10.1",
+      "@mantine/form":          "^7.10.1",
+      "@mantine/hooks":         "^7.10.1",
+      "@mantine/notifications": "^7.10.1",
+      "@react-three/drei":      "^9.106.0",
+      "@react-three/fiber":     "^8.16.7",
+      "@tabler/icons-react":    "^3.5.0",
+      "@tauri-apps/api":        "^1.5.6",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
-    "framer-motion": "^11.2.5",
+      "framer-motion":          "^11.2.10",
     "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+      "react":                  "^18.3.1",
+      "react-dom":              "^18.3.1",
     "tailwind-merge": "^2.3.0",
     "three": "^0.164.1",
     "three-globe": "^2.31.0",
@@ -30,17 +32,17 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.5.14",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+      "@types/node":      "^20.13.0",
+      "@types/react":     "^18.3.3",
+      "@types/react-dom": "^18.3.0",
     "@types/three": "^0.164.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8",
+      "eslint":           "^8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5"
+      "typescript":       "^5.4.5"
   }
 }
