--- a/modules/srv-mod-operator-api/Cargo.toml
+++ b/modules/srv-mod-operator-api/Cargo.toml
@@ -15,7 +15,16 @@ axum = { version = "0.7.5", features = ["http2", "multipart", "macros"] }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
 tower = { version = "0.4.4" }
-tower-http = { version = "0.5.2", features = ["catch-panic", "normalize-path", "sensitive-headers", "trace", "validate-request", "compression-full", "limit"] }
+tower-http = { version = "0.5.2", features = [
+    "catch-panic",
+    "normalize-path",
+    "sensitive-headers",
+    "trace",
+    "validate-request",
+    "compression-full",
+    "limit",
+    "cors"
+] }
 tracing = "0.1"
 jsonwebtoken = "9.3.0"
 rs2-utils = { path = "../../libs/rs2-utils" }
