--- a/server/sample-config.json
+++ b/server/sample-config.json
@@ -4,7 +4,7 @@
         "port": 8080,
         "host": "127.0.0.1",
         "tls":  {
-            "enabled": true,
+            "enabled": false,
             "port":    8443,
             "host":    "127.0.0.1",
             "cert":    "./server/sample-tls-certificates/cert.pem",
