--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -15,6 +15,8 @@ incremental = false
 
 [dependencies]
 mod-coffee-core = { path = "../modules/mod-loader-coffee-core", optional = true }
+mod-ntallocator = { path = "../modules/mod-ntallocator"}
+libc-print = "0.1.23"
 
 [features]
 default = ["bof-loader"]
