--- a/command-and-control-gui/package.json
+++ b/command-and-control-gui/package.json
@@ -22,7 +22,9 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
       "framer-motion":          "^11.2.10",
+      "mantine-datatable":      "^7.9.1",
     "next": "14.2.3",
+      "radash":                 "^12.1.0",
       "react":                  "^18.3.1",
       "react-dom":              "^18.3.1",
     "tailwind-merge": "^2.3.0",
