--- a/libs/rs2-winapi/Cargo.toml
+++ b/libs/rs2-winapi/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "rs2-indirect-syscall"
+name = "rs2-winapi"
 version = "0.1.0"
 edition = "2021"
-
-[dependencies]
-rs2-winapi = {path = "../rs2-winapi"}
 
 [dev-dependencies]
 libc-print = "0.1.23"
