--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ members = [
     "libs/rs2-utils",
     "libs/rs2-crypt",
     "libs/coffee",
+    "libs/rs2-winapi",
+    "modules/mod-ntapi",
     "modules/mod-loader-coffee-core", "modules/mod-protocol-json", "libs/rs2-indirect-syscall", "libs/rs2-communication-protocol", "modules/srv-mod-operator-api", "modules/srv-mod-config", "modules/srv-mod-database", "modules/srv-mod-http-handler",
 ]
 resolver = "2"
