--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,15 @@ members = [
     "libs/rs2-utils",
     "libs/rs2-crypt",
     "libs/coffee",
-    "modules/mod-loader-coffee-core", "modules/mod-protocol-json", "libs/rs2-indirect-syscall", "libs/rs2-communication-protocol", "modules/srv-mod-operator-api", "modules/srv-mod-config", "modules/srv-mod-database", "modules/srv-mod-http-handler", "modules/srv-mod-terminal-emulator-commands", "libs/rs2-proc-macro-field-names",
+    "modules/mod-loader-coffee-core",
+    "modules/mod-protocol-json",
+    "libs/rs2-indirect-syscall",
+    "libs/rs2-communication-protocol",
+    "modules/srv-mod-operator-api",
+    "modules/srv-mod-config",
+    "modules/srv-mod-database",
+    "modules/srv-mod-http-handler",
+    "modules/srv-mod-terminal-emulator-commands",
 ]
 resolver = "2"
 package = { authors = ["ebalo55 <me@ebalo.xyz>"], edition = "2021", version = "0.1.0" }
