test: server test-helper crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ members = [
     "modules/srv-mod-config",
     "modules/srv-mod-database",
     "modules/srv-mod-http-handler",
-    "modules/srv-mod-terminal-emulator-commands",
+    "modules/srv-mod-terminal-emulator-commands", "libs/rs2-srv-test-helper",
 ]
 resolver = "2"
 package = { authors = ["ebalo55 <me@ebalo.xyz>"], edition = "2021", version = "0.1.0" }
