--- a/command-and-control-gui/package.json
+++ b/command-and-control-gui/package.json
@@ -15,6 +15,7 @@
         "@mantine/form": "^7.10.1",
         "@mantine/hooks": "^7.10.1",
         "@mantine/notifications": "^7.10.1",
+        "@microsoft/fetch-event-source": "^2.0.1",
         "@tabler/icons-react": "^3.5.0",
         "@tauri-apps/api": "^1.5.6",
         "ansi-to-react": "^6.1.6",
