--- a/libs/coffee/Cargo.toml
+++ b/libs/coffee/Cargo.toml
@@ -25,7 +25,7 @@ lto = true
 clap = { version = "4.3.5", features = ["derive"] }
 # Logging.
 tracing-subscriber = "0.3.17"
-tracing = { version = "0.1.37", optional = true }
+tracing = { version = "0.1.37" }
 # Error handling.
 color-eyre = "0.6.2"
 # Implementation
