fix: initialize global Instance in mod-agentcore

--- a/modules/mod-agentcore/Cargo.toml
+++ b/modules/mod-agentcore/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+mod-hhtgates = {path = "../../modules/mod-hhtgates"}
 rs2-win32 = {path = "../../libs/rs2-win32" }
 spin = "0.9"
 
