--- a/libs/rs2-utils/Cargo.toml
+++ b/libs/rs2-utils/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.86"
 log = { version = "0.4.21", optional = true }
 validator = { version = "0.18.1", features = ["derive"], optional = true }
 serde_json = { version = "1.0.117", optional = true }
+bytes = { version = "1.6.0", optional = true }
 
 [features]
 default = ["duration-extension", "unrecoverable-error", "unwrap-infallible"]
