--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -15,11 +15,11 @@ incremental = false
 
 [dependencies]
 rs2-communication-protocol = {path = "../libs/rs2-communication-protocol"}
+rs2-crypt = {path = "../libs/rs2-crypt"}
 mod-agentcore = {path = "../modules/mod-agentcore" }
 mod-hhtgates = {path = "../modules/mod-hhtgates"}
 mod-win32 = {path = "../modules/mod-win32" }
 mod-ntallocator = {path = "../modules/mod-ntallocator", optional = true }
-rs2-crypt = {path = "../libs/rs2-crypt"}
 mod-protocol-json = {path = "../modules/mod-protocol-json", optional = true}
 mod-protocol-winhttp = {path = "../modules/mod-protocol-winhttp", optional = true}
 libc-print = "0.1.23"
@@ -30,6 +30,7 @@ tokio = { version = "1", features = ["full"] }
 anyhow = "1.0.86"
 rand = "0.8.5"
 chrono = "0.4"
+futures = "0.3.30"
 
 [features]
 default = ["protocol-winhttp", "ntallocator"]
