--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Install missing clippy dependencies
-        run: sudo apt install -y libgdk3.0-cil-dev librust-gdk-sys-dev librust-gdk-dev
+        run: sudo apt install -y libgdk3.0-cil-dev librust-gdk-sys-dev librust-gdk-dev libsoup2.4-dev
 
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@16499b5e05bf2e26879000db0c1d13f7e13fa3af #@v1
