--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -44,3 +44,4 @@ nt-virtualalloc = ["dep:mod-nt-virtualalloc"]
 nt-heapalloc = ["dep:mod-nt-heapalloc"]
 std-runtime = ["dep:mod-std-runtime"]
 nostd-nt-runtime = ["dep:mod-nostd-nt-runtime"]
+ltest = []
