--- a/modules/mod-std-runtime/Cargo.toml
+++ b/modules/mod-std-runtime/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 rs2-communication-protocol = { path = "../../libs/rs2-communication-protocol" }
 rs2-runtime = { path = "../../libs/rs2-runtime" }
+serde = { version = "1.0", features = ["derive", "rc"] }
