fix: resolved remaining errors after merge

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,14 @@ members = [
     "modules/mod-agentcore",
     "modules/mod-hhtgates",
     "modules/mod-loader-coffee-core",
-    "modules/mod-ntallocator",
+    "modules/mod-nostd",
+    "modules/mod-nostd-nt-runtime",
+    "modules/mod-nt-heapalloc",
+    "modules/mod-nt-virtualalloc",
     "modules/mod-protocol-json",
     "modules/mod-protocol-winhttp",
+    "modules/mod-std-runtime",
+    "modules/mod-tokio-runtime",
     "modules/mod-win32",
     "modules/srv-mod-config",
     "modules/srv-mod-database",
