feat: conditional support for server derive functionalities

--- a/libs/rs2-communication-protocol/Cargo.toml
+++ b/libs/rs2-communication-protocol/Cargo.toml
@@ -4,11 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive", "rc"] }
-bytes = "1.6.0"
+serde = { version = "1.0.210", features = ["derive", "rc"] }
+bytes = "1.7.2"
 rs2-crypt = { path = "../rs2-crypt" }
-anyhow = "1.0.86"
+anyhow = "1.0.89"
 hex-literal = "0.4.1"
+sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"], optional = true }
 
 [dev-dependencies]
-serde_json = "1.0"
+serde_json = "1.0.128"
+
+[features]
+default = []
+server = ["dep:sea-orm"]
