--- a/modules/srv-mod-migration/Cargo.toml
+++ b/modules/srv-mod-migration/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "migration"
+name = "srv-mod-migration"
 version = "0.1.0"
 edition = "2021"
 publish = false
 
 [lib]
-name = "migration"
 path = "src/lib.rs"
 
 [dependencies]
